src/main/java/bitbox/logicgrammar/LogicGrammarParser.java
// Generated from /home/fusiled/workspace/bitbox/src/main/java/bitbox/logicgrammar/LogicGrammar.g4 by ANTLR 4.7
package bitbox.logicgrammar;

import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.ParseTreeVisitor;
import org.antlr.v4.runtime.tree.TerminalNode;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class LogicGrammarParser extends Parser {
    public static final int
            L_SQUARE = 1, R_SQUARE = 2, NOTL_TOKEN = 3, NOTB_TOKEN = 4, MUL_TOKEN = 5, DIV_TOKEN = 6,
            REM_TOKEN = 7, SUM_TOKEN = 8, SUB_TOKEN = 9, RSHIFT_TOKEN = 10, LSHIFT_TOKEN = 11,
            GREAT_TOKEN = 12, LESS_TOKEN = 13, GEQ_TOKEN = 14, LEQ_TOKEN = 15, DIFFERENT_TOKEN = 16,
            EQUAL_TOKEN = 17, XORB_TOKEN = 18, ANDB_TOKEN = 19, ORB_TOKEN = 20, ANDL_TOKEN = 21,
            ORL_TOKEN = 22, NUMBER = 23, WS = 24;
    public static final int
            RULE_root = 0, RULE_orl = 1, RULE_andl = 2, RULE_orb = 3, RULE_xorb = 4,
            RULE_andb = 5, RULE_compare = 6, RULE_bitwise = 7, RULE_addsub = 8, RULE_muldivrem = 9,
            RULE_neg = 10, RULE_base = 11;
    public static final String[] ruleNames = {
            "root", "orl", "andl", "orb", "xorb", "andb", "compare", "bitwise", "addsub",
            "muldivrem", "neg", "base"
    };
    /**
     * @deprecated Use {@link #VOCABULARY} instead.
     */
    @Deprecated
    public static final String[] tokenNames;
    public static final ATN _ATN =
            new ATNDeserializer().deserialize(_serializedATN.toCharArray());
    protected static final DFA[] _decisionToDFA;
    protected static final PredictionContextCache _sharedContextCache =
            new PredictionContextCache();
    private static final String[] _LITERAL_NAMES = {
            null, "'('", "')'", "'!'", "'~'", "'*'", "'/'", "'%'", "'+'", "'-'", "'>>'",
            "'<<'", "'>'", "'<'", "'>='", "'<='", "'!='", "'=='", "'^'", "'&'", "'|'",
            "'&&'", "'||'"
    };
    private static final String[] _SYMBOLIC_NAMES = {
            null, "L_SQUARE", "R_SQUARE", "NOTL_TOKEN", "NOTB_TOKEN", "MUL_TOKEN",
            "DIV_TOKEN", "REM_TOKEN", "SUM_TOKEN", "SUB_TOKEN", "RSHIFT_TOKEN", "LSHIFT_TOKEN",
            "GREAT_TOKEN", "LESS_TOKEN", "GEQ_TOKEN", "LEQ_TOKEN", "DIFFERENT_TOKEN",
            "EQUAL_TOKEN", "XORB_TOKEN", "ANDB_TOKEN", "ORB_TOKEN", "ANDL_TOKEN",
            "ORL_TOKEN", "NUMBER", "WS"
    };
    public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

    static {
        RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION);
    }

    static {
        tokenNames = new String[_SYMBOLIC_NAMES.length];
        for (int i = 0; i < tokenNames.length; i++) {
            tokenNames[i] = VOCABULARY.getLiteralName(i);
            if (tokenNames[i] == null) {
                tokenNames[i] = VOCABULARY.getSymbolicName(i);
            }

            if (tokenNames[i] == null) {
                tokenNames[i] = "<INVALID>";
            }
        }
    }

    static {
        _decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
        for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
            _decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
        }
    }

    public LogicGrammarParser(TokenStream input) {
        super(input);
        _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
    }

    @Override
    @Deprecated
    public String[] getTokenNames() {
        return tokenNames;
    }

    @Override

    public Vocabulary getVocabulary() {
        return VOCABULARY;
    }

    @Override
    public String getGrammarFileName() {
        return "LogicGrammar.g4";
    }

    @Override
    public String[] getRuleNames() {
        return ruleNames;
    }

    @Override
    public String getSerializedATN() {
        return _serializedATN;
    }

    @Override
    public ATN getATN() {
        return _ATN;
    }

    public final RootContext root() throws RecognitionException {
        return root(0);
    }

    private RootContext root(int _p) throws RecognitionException {
        ParserRuleContext _parentctx = _ctx;
        int _parentState = getState();
        RootContext _localctx = new RootContext(_ctx, _parentState);
        RootContext _prevctx = _localctx;
        int _startState = 0;
        enterRecursionRule(_localctx, 0, RULE_root, _p);
        try {
            int _alt;
            enterOuterAlt(_localctx, 1);
            {
                {
                    ((RootContext) _localctx).result = 0;
                    setState(26);
                    ((RootContext) _localctx).lower_orl = orl(0);
                    ((RootContext) _localctx).result = ((RootContext) _localctx).lower_orl.result;
                }
                _ctx.stop = _input.LT(-1);
                setState(36);
                _errHandler.sync(this);
                _alt = getInterpreter().adaptivePredict(_input, 0, _ctx);
                while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
                    if (_alt == 1) {
                        if (_parseListeners != null) triggerExitRuleEvent();
                        _prevctx = _localctx;
                        {
                            {
                                _localctx = new RootContext(_parentctx, _parentState);
                                _localctx.lower_root = _prevctx;
                                _localctx.lower_root = _prevctx;
                                pushNewRecursionContext(_localctx, _startState, RULE_root);
                                setState(29);
                                if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
                                setState(30);
                                match(ORL_TOKEN);
                                setState(31);
                                ((RootContext) _localctx).lower_orl = orl(0);
                                ((RootContext) _localctx).result = ((((RootContext) _localctx).lower_root.result != 0) || (((RootContext) _localctx).lower_orl.result != 0)) ? 1 : 0;
                            }
                        }
                    }
                    setState(38);
                    _errHandler.sync(this);
                    _alt = getInterpreter().adaptivePredict(_input, 0, _ctx);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            unrollRecursionContexts(_parentctx);
        }
        return _localctx;
    }

    public final OrlContext orl() throws RecognitionException {
        return orl(0);
    }

    private OrlContext orl(int _p) throws RecognitionException {
        ParserRuleContext _parentctx = _ctx;
        int _parentState = getState();
        OrlContext _localctx = new OrlContext(_ctx, _parentState);
        OrlContext _prevctx = _localctx;
        int _startState = 2;
        enterRecursionRule(_localctx, 2, RULE_orl, _p);
        try {
            int _alt;
            enterOuterAlt(_localctx, 1);
            {
                {
                    setState(40);
                    ((OrlContext) _localctx).lower_andl = andl(0);
                    ((OrlContext) _localctx).result = ((OrlContext) _localctx).lower_andl.result;
                }
                _ctx.stop = _input.LT(-1);
                setState(50);
                _errHandler.sync(this);
                _alt = getInterpreter().adaptivePredict(_input, 1, _ctx);
                while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
                    if (_alt == 1) {
                        if (_parseListeners != null) triggerExitRuleEvent();
                        _prevctx = _localctx;
                        {
                            {
                                _localctx = new OrlContext(_parentctx, _parentState);
                                _localctx.lower_orl = _prevctx;
                                _localctx.lower_orl = _prevctx;
                                pushNewRecursionContext(_localctx, _startState, RULE_orl);
                                setState(43);
                                if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
                                setState(44);
                                match(ANDL_TOKEN);
                                setState(45);
                                ((OrlContext) _localctx).lower_andl = andl(0);
                                ((OrlContext) _localctx).result = ((((OrlContext) _localctx).lower_orl.result != 0) && (((OrlContext) _localctx).lower_andl.result != 0)) ? 1 : 0;
                            }
                        }
                    }
                    setState(52);
                    _errHandler.sync(this);
                    _alt = getInterpreter().adaptivePredict(_input, 1, _ctx);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            unrollRecursionContexts(_parentctx);
        }
        return _localctx;
    }

    public final AndlContext andl() throws RecognitionException {
        return andl(0);
    }

    private AndlContext andl(int _p) throws RecognitionException {
        ParserRuleContext _parentctx = _ctx;
        int _parentState = getState();
        AndlContext _localctx = new AndlContext(_ctx, _parentState);
        AndlContext _prevctx = _localctx;
        int _startState = 4;
        enterRecursionRule(_localctx, 4, RULE_andl, _p);
        try {
            int _alt;
            enterOuterAlt(_localctx, 1);
            {
                {
                    setState(54);
                    ((AndlContext) _localctx).lower_orb = orb(0);
                    ((AndlContext) _localctx).result = ((AndlContext) _localctx).lower_orb.result;
                }
                _ctx.stop = _input.LT(-1);
                setState(64);
                _errHandler.sync(this);
                _alt = getInterpreter().adaptivePredict(_input, 2, _ctx);
                while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
                    if (_alt == 1) {
                        if (_parseListeners != null) triggerExitRuleEvent();
                        _prevctx = _localctx;
                        {
                            {
                                _localctx = new AndlContext(_parentctx, _parentState);
                                _localctx.lower_andl = _prevctx;
                                _localctx.lower_andl = _prevctx;
                                pushNewRecursionContext(_localctx, _startState, RULE_andl);
                                setState(57);
                                if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
                                setState(58);
                                match(ORB_TOKEN);
                                setState(59);
                                ((AndlContext) _localctx).lower_orb = orb(0);
                                ((AndlContext) _localctx).result = ((AndlContext) _localctx).lower_andl.result | ((AndlContext) _localctx).lower_orb.result;
                            }
                        }
                    }
                    setState(66);
                    _errHandler.sync(this);
                    _alt = getInterpreter().adaptivePredict(_input, 2, _ctx);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            unrollRecursionContexts(_parentctx);
        }
        return _localctx;
    }

    public final OrbContext orb() throws RecognitionException {
        return orb(0);
    }

    private OrbContext orb(int _p) throws RecognitionException {
        ParserRuleContext _parentctx = _ctx;
        int _parentState = getState();
        OrbContext _localctx = new OrbContext(_ctx, _parentState);
        OrbContext _prevctx = _localctx;
        int _startState = 6;
        enterRecursionRule(_localctx, 6, RULE_orb, _p);
        try {
            int _alt;
            enterOuterAlt(_localctx, 1);
            {
                {
                    setState(68);
                    ((OrbContext) _localctx).lower_xorb = xorb(0);
                    ((OrbContext) _localctx).result = ((OrbContext) _localctx).lower_xorb.result;
                }
                _ctx.stop = _input.LT(-1);
                setState(78);
                _errHandler.sync(this);
                _alt = getInterpreter().adaptivePredict(_input, 3, _ctx);
                while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
                    if (_alt == 1) {
                        if (_parseListeners != null) triggerExitRuleEvent();
                        _prevctx = _localctx;
                        {
                            {
                                _localctx = new OrbContext(_parentctx, _parentState);
                                _localctx.lower_orb = _prevctx;
                                _localctx.lower_orb = _prevctx;
                                pushNewRecursionContext(_localctx, _startState, RULE_orb);
                                setState(71);
                                if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
                                setState(72);
                                match(XORB_TOKEN);
                                setState(73);
                                ((OrbContext) _localctx).lower_xorb = xorb(0);
                                ((OrbContext) _localctx).result = ((OrbContext) _localctx).lower_orb.result ^ ((OrbContext) _localctx).lower_xorb.result;
                            }
                        }
                    }
                    setState(80);
                    _errHandler.sync(this);
                    _alt = getInterpreter().adaptivePredict(_input, 3, _ctx);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            unrollRecursionContexts(_parentctx);
        }
        return _localctx;
    }

    public final XorbContext xorb() throws RecognitionException {
        return xorb(0);
    }

    private XorbContext xorb(int _p) throws RecognitionException {
        ParserRuleContext _parentctx = _ctx;
        int _parentState = getState();
        XorbContext _localctx = new XorbContext(_ctx, _parentState);
        XorbContext _prevctx = _localctx;
        int _startState = 8;
        enterRecursionRule(_localctx, 8, RULE_xorb, _p);
        try {
            int _alt;
            enterOuterAlt(_localctx, 1);
            {
                {
                    setState(82);
                    ((XorbContext) _localctx).lower_andb = andb(0);
                    ((XorbContext) _localctx).result = ((XorbContext) _localctx).lower_andb.result;
                }
                _ctx.stop = _input.LT(-1);
                setState(92);
                _errHandler.sync(this);
                _alt = getInterpreter().adaptivePredict(_input, 4, _ctx);
                while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
                    if (_alt == 1) {
                        if (_parseListeners != null) triggerExitRuleEvent();
                        _prevctx = _localctx;
                        {
                            {
                                _localctx = new XorbContext(_parentctx, _parentState);
                                _localctx.lower_xorb = _prevctx;
                                _localctx.lower_xorb = _prevctx;
                                pushNewRecursionContext(_localctx, _startState, RULE_xorb);
                                setState(85);
                                if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
                                setState(86);
                                match(ANDB_TOKEN);
                                setState(87);
                                ((XorbContext) _localctx).lower_andb = andb(0);
                                ((XorbContext) _localctx).result = ((XorbContext) _localctx).lower_xorb.result & ((XorbContext) _localctx).lower_andb.result;
                            }
                        }
                    }
                    setState(94);
                    _errHandler.sync(this);
                    _alt = getInterpreter().adaptivePredict(_input, 4, _ctx);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            unrollRecursionContexts(_parentctx);
        }
        return _localctx;
    }

    public final AndbContext andb() throws RecognitionException {
        return andb(0);
    }

    private AndbContext andb(int _p) throws RecognitionException {
        ParserRuleContext _parentctx = _ctx;
        int _parentState = getState();
        AndbContext _localctx = new AndbContext(_ctx, _parentState);
        AndbContext _prevctx = _localctx;
        int _startState = 10;
        enterRecursionRule(_localctx, 10, RULE_andb, _p);
        try {
            int _alt;
            enterOuterAlt(_localctx, 1);
            {
                {
                    setState(96);
                    ((AndbContext) _localctx).lower_cmp = compare(0);
                    ((AndbContext) _localctx).result = ((AndbContext) _localctx).lower_cmp.result;
                }
                _ctx.stop = _input.LT(-1);
                setState(111);
                _errHandler.sync(this);
                _alt = getInterpreter().adaptivePredict(_input, 6, _ctx);
                while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
                    if (_alt == 1) {
                        if (_parseListeners != null) triggerExitRuleEvent();
                        _prevctx = _localctx;
                        {
                            setState(109);
                            _errHandler.sync(this);
                            switch (getInterpreter().adaptivePredict(_input, 5, _ctx)) {
                                case 1: {
                                    _localctx = new AndbContext(_parentctx, _parentState);
                                    _localctx.lower_andb = _prevctx;
                                    _localctx.lower_andb = _prevctx;
                                    pushNewRecursionContext(_localctx, _startState, RULE_andb);
                                    setState(99);
                                    if (!(precpred(_ctx, 2)))
                                        throw new FailedPredicateException(this, "precpred(_ctx, 2)");
                                    setState(100);
                                    match(EQUAL_TOKEN);
                                    setState(101);
                                    ((AndbContext) _localctx).lower_cmp = compare(0);
                                    ((AndbContext) _localctx).result = (((AndbContext) _localctx).lower_andb.result == ((AndbContext) _localctx).lower_cmp.result) ? 1 : 0;
                                }
                                break;
                                case 2: {
                                    _localctx = new AndbContext(_parentctx, _parentState);
                                    _localctx.lower_andb = _prevctx;
                                    _localctx.lower_andb = _prevctx;
                                    pushNewRecursionContext(_localctx, _startState, RULE_andb);
                                    setState(104);
                                    if (!(precpred(_ctx, 1)))
                                        throw new FailedPredicateException(this, "precpred(_ctx, 1)");
                                    setState(105);
                                    match(DIFFERENT_TOKEN);
                                    setState(106);
                                    compare(0);
                                    ((AndbContext) _localctx).result = (((AndbContext) _localctx).lower_andb.result != ((AndbContext) _localctx).lower_cmp.result) ? 0 : 1;
                                }
                                break;
                            }
                        }
                    }
                    setState(113);
                    _errHandler.sync(this);
                    _alt = getInterpreter().adaptivePredict(_input, 6, _ctx);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            unrollRecursionContexts(_parentctx);
        }
        return _localctx;
    }

    public final CompareContext compare() throws RecognitionException {
        return compare(0);
    }

    private CompareContext compare(int _p) throws RecognitionException {
        ParserRuleContext _parentctx = _ctx;
        int _parentState = getState();
        CompareContext _localctx = new CompareContext(_ctx, _parentState);
        CompareContext _prevctx = _localctx;
        int _startState = 12;
        enterRecursionRule(_localctx, 12, RULE_compare, _p);
        try {
            int _alt;
            enterOuterAlt(_localctx, 1);
            {
                {
                    _localctx = new CompareSimpleContext(_localctx);
                    _ctx = _localctx;
                    _prevctx = _localctx;

                    setState(115);
                    ((CompareSimpleContext) _localctx).lower_bitwise = bitwise(0);
                    ((CompareSimpleContext) _localctx).result = ((CompareSimpleContext) _localctx).lower_bitwise.result;
                }
                _ctx.stop = _input.LT(-1);
                setState(140);
                _errHandler.sync(this);
                _alt = getInterpreter().adaptivePredict(_input, 8, _ctx);
                while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
                    if (_alt == 1) {
                        if (_parseListeners != null) triggerExitRuleEvent();
                        _prevctx = _localctx;
                        {
                            setState(138);
                            _errHandler.sync(this);
                            switch (getInterpreter().adaptivePredict(_input, 7, _ctx)) {
                                case 1: {
                                    _localctx = new CompareGreatContext(new CompareContext(_parentctx, _parentState));
                                    ((CompareGreatContext) _localctx).lower_compare = _prevctx;
                                    pushNewRecursionContext(_localctx, _startState, RULE_compare);
                                    setState(118);
                                    if (!(precpred(_ctx, 4)))
                                        throw new FailedPredicateException(this, "precpred(_ctx, 4)");
                                    setState(119);
                                    match(GREAT_TOKEN);
                                    setState(120);
                                    ((CompareGreatContext) _localctx).lower_bitwise = bitwise(0);
                                    ((CompareGreatContext) _localctx).result = (((CompareGreatContext) _localctx).lower_compare.result > ((CompareGreatContext) _localctx).lower_bitwise.result) ? 1 : 0;
                                }
                                break;
                                case 2: {
                                    _localctx = new CompareLessContext(new CompareContext(_parentctx, _parentState));
                                    ((CompareLessContext) _localctx).lower_compare = _prevctx;
                                    pushNewRecursionContext(_localctx, _startState, RULE_compare);
                                    setState(123);
                                    if (!(precpred(_ctx, 3)))
                                        throw new FailedPredicateException(this, "precpred(_ctx, 3)");
                                    setState(124);
                                    match(LESS_TOKEN);
                                    setState(125);
                                    ((CompareLessContext) _localctx).lower_bitwise = bitwise(0);
                                    ((CompareLessContext) _localctx).result = (((CompareLessContext) _localctx).lower_compare.result < ((CompareLessContext) _localctx).lower_bitwise.result) ? 1 : 0;
                                }
                                break;
                                case 3: {
                                    _localctx = new CompareGeqContext(new CompareContext(_parentctx, _parentState));
                                    ((CompareGeqContext) _localctx).lower_compare = _prevctx;
                                    pushNewRecursionContext(_localctx, _startState, RULE_compare);
                                    setState(128);
                                    if (!(precpred(_ctx, 2)))
                                        throw new FailedPredicateException(this, "precpred(_ctx, 2)");
                                    setState(129);
                                    match(GEQ_TOKEN);
                                    setState(130);
                                    ((CompareGeqContext) _localctx).lower_bitwise = bitwise(0);
                                    ((CompareGeqContext) _localctx).result = (((CompareGeqContext) _localctx).lower_compare.result >= ((CompareGeqContext) _localctx).lower_bitwise.result) ? 1 : 0;
                                }
                                break;
                                case 4: {
                                    _localctx = new CompareLeqContext(new CompareContext(_parentctx, _parentState));
                                    ((CompareLeqContext) _localctx).lower_compare = _prevctx;
                                    pushNewRecursionContext(_localctx, _startState, RULE_compare);
                                    setState(133);
                                    if (!(precpred(_ctx, 1)))
                                        throw new FailedPredicateException(this, "precpred(_ctx, 1)");
                                    setState(134);
                                    match(LEQ_TOKEN);
                                    setState(135);
                                    ((CompareLeqContext) _localctx).lower_bitwise = bitwise(0);
                                    ((CompareLeqContext) _localctx).result = (((CompareLeqContext) _localctx).lower_compare.result <= ((CompareLeqContext) _localctx).lower_bitwise.result) ? 1 : 0;
                                }
                                break;
                            }
                        }
                    }
                    setState(142);
                    _errHandler.sync(this);
                    _alt = getInterpreter().adaptivePredict(_input, 8, _ctx);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            unrollRecursionContexts(_parentctx);
        }
        return _localctx;
    }

    public final BitwiseContext bitwise() throws RecognitionException {
        return bitwise(0);
    }

    private BitwiseContext bitwise(int _p) throws RecognitionException {
        ParserRuleContext _parentctx = _ctx;
        int _parentState = getState();
        BitwiseContext _localctx = new BitwiseContext(_ctx, _parentState);
        BitwiseContext _prevctx = _localctx;
        int _startState = 14;
        enterRecursionRule(_localctx, 14, RULE_bitwise, _p);
        try {
            int _alt;
            enterOuterAlt(_localctx, 1);
            {
                {
                    setState(144);
                    ((BitwiseContext) _localctx).lower_addsub = addsub(0);
                    ((BitwiseContext) _localctx).result = ((BitwiseContext) _localctx).lower_addsub.result;
                }
                _ctx.stop = _input.LT(-1);
                setState(159);
                _errHandler.sync(this);
                _alt = getInterpreter().adaptivePredict(_input, 10, _ctx);
                while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
                    if (_alt == 1) {
                        if (_parseListeners != null) triggerExitRuleEvent();
                        _prevctx = _localctx;
                        {
                            setState(157);
                            _errHandler.sync(this);
                            switch (getInterpreter().adaptivePredict(_input, 9, _ctx)) {
                                case 1: {
                                    _localctx = new BitwiseContext(_parentctx, _parentState);
                                    _localctx.lower_bitwise = _prevctx;
                                    _localctx.lower_bitwise = _prevctx;
                                    pushNewRecursionContext(_localctx, _startState, RULE_bitwise);
                                    setState(147);
                                    if (!(precpred(_ctx, 2)))
                                        throw new FailedPredicateException(this, "precpred(_ctx, 2)");
                                    setState(148);
                                    match(RSHIFT_TOKEN);
                                    setState(149);
                                    ((BitwiseContext) _localctx).lower_addsub = addsub(0);
                                    ((BitwiseContext) _localctx).result = ((BitwiseContext) _localctx).lower_bitwise.result >> ((BitwiseContext) _localctx).lower_addsub.result;
                                }
                                break;
                                case 2: {
                                    _localctx = new BitwiseContext(_parentctx, _parentState);
                                    _localctx.lower_bitwise = _prevctx;
                                    _localctx.lower_bitwise = _prevctx;
                                    pushNewRecursionContext(_localctx, _startState, RULE_bitwise);
                                    setState(152);
                                    if (!(precpred(_ctx, 1)))
                                        throw new FailedPredicateException(this, "precpred(_ctx, 1)");
                                    setState(153);
                                    match(LSHIFT_TOKEN);
                                    setState(154);
                                    ((BitwiseContext) _localctx).lower_addsub = addsub(0);
                                    ((BitwiseContext) _localctx).result = ((BitwiseContext) _localctx).lower_bitwise.result << ((BitwiseContext) _localctx).lower_addsub.result;
                                }
                                break;
                            }
                        }
                    }
                    setState(161);
                    _errHandler.sync(this);
                    _alt = getInterpreter().adaptivePredict(_input, 10, _ctx);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            unrollRecursionContexts(_parentctx);
        }
        return _localctx;
    }

    public final AddsubContext addsub() throws RecognitionException {
        return addsub(0);
    }
